--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,7 +89,7 @@ dependencies:
   image_picker_for_web: 2.1.10
   image_picker_ios: 0.8.6+1
   image_picker_platform_interface: 2.6.2
-  intl: 0.18.0
+  intl: ^0.18.1
   json_path: 0.4.1
   map_launcher: 2.5.0+1
   mask_text_input_formatter: 2.4.0
@@ -138,6 +138,11 @@ dependencies:
   webview_flutter_platform_interface: 2.0.2
   webview_flutter_wkwebview: 3.1.1
   webviewx_plus: ^0.3.3
+  flutter_ruler_picker: ^1.0.3
+  simple_circular_progress_bar: ^1.0.2
+  flutter_resizable_container: ^0.1.2
+  resizable_draggable_widget: ^0.0.5
+  gallery_saver: ^2.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -178,6 +183,12 @@ flutter:
     - assets/lottie_animations/
     - assets/rive_animations/
     - assets/pdfs/
+    - assets/icons/bottomLeft.png
+    - assets/icons/bottomRight.png
+    - assets/icons/topRight.png
+    - assets/icons/topLeft.png
+    - assets/icons/vertical.png
+    - assets/icons/horizontal.png
 
   fonts:
     - family: 'mice'
